update web template to fix screen clipping issue on chromebooks

--- a/Assets/WebGLTemplates/Aqualab/TemplateData/style.css
+++ b/Assets/WebGLTemplates/Aqualab/TemplateData/style.css
@@ -19,14 +19,13 @@ body {
 }
 
 .webgl-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    position: relative;
+    margin: 0 auto;
+    top: 2vh;
+    width: 1024px;
 }
 
-canvas { 
+canvas {
     cursor: none !important;
 }
 
